--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,10 @@
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>{{ page.title | default: site.title }}</title>
-<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+<title>CommsBlack Mobile — Mission</title>
+  
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/assets/css/style.css">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<script defer src="/assets/js/script.js"></script>
+
+  <meta name="description" content="Private. Secure. Anonymous. Speak Freely.">
+
