nav: force Threat Assessment after Mission in desktop row and hamburger list

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     </a>
     <nav class="nav desktop-nav" aria-label="Primary">
       <a href="index.html">Mission</a>
-      <a href="products.html">Products</a>
+      <a href="/threat-assessment.html">Threat Assessment</a> <a href="products.html">Products</a>
       <a href="academy.html">Academy</a>
       <a href="faqs.html">FAQ’s</a>
       <a href="contact.html">Contact</a>
@@ -25,6 +25,7 @@
     </nav>
   </div>
 </header>
+
 
 
 
