nav/cta: point to /armoury.html and /training.html; labels Armoury/Training

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
     </a>
     <nav class="nav desktop-nav" aria-label="Primary">
       <a href="index.html">Mission</a>
-      <a href="/threat-assessment.html">Threat Assessment</a> <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
+      <a href="/threat-assessment.html">Threat Assessment</a> <a href="/armoury.html"">Armoury</a>
+      <a href="/training.html"">Training</a>
       <a href="contact.html">Contact</a>
     </nav>
     <div class="header-actions">
@@ -24,6 +24,7 @@
     </nav>
   </div>
 </header>
+
 
 
 
