ux: apply consistent container spacing site-wide (Armoury & Threat Assessment match Academy)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
   <head>{% include head.html %}</head>
   <body>
     {% include header.html %}
-    <main id="content">
+    <main id="content" class="container">
       {{ content }}
     </main>
     {% include footer.html %}
   </body>
 </html>
+
